kustomizations/streaming/bazarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  labels:
    app: bazarr
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/instance: streaming-stack
    app.kubernetes.io/part-of: streaming-stack
spec:
  selector:
    app: bazarr
    app.kubernetes.io/name: bazarr
    app.kubernetes.io/instance: streaming-stack
  ports:
  - name: http
    port: 6767
    targetPort: 6767
