kustomizations/streaming/bazarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: bazarr.citocafecito.work
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: bazarr
              port:
                number: 6767
